fix(repo): add repository query methods for workspace, document, and conversation analytics